--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
                   />
                 </div>
               </div>
+              <div>
+                <label
+                  for="date-of-birth"
+                  class="block text-sm font-medium text-gray-700"
+                  >Date of Birth</label
+                >
+                <input
+                  type="date"
+                  id="date-of-birth"
+                  class="mt-1 p-2 w-full border rounded-md"
+                />
+              </div>
               <!-- A bit complex -->
               <div class="w-full">
                 <!-- teacher -->
@@ -97,6 +109,7 @@
                   type="radio"
                   id="teacher-radio"
                   class="h-4 w-4 peer/teacher"
+                  checked
                 />
                 <label for="teacher-radio">Teacher</label>
                 <!-- student -->
@@ -249,6 +262,32 @@
                   </div>
                 </div>
               </div>
+
+              <div>
+                <label
+                  for="photo"
+                  class="block text-sm font-medium text-gray-700 mb-1"
+                >
+                  Upload Photo
+                </label>
+                <input
+                  type="file"
+                  id="photo"
+                  class="block w-full text-sm text-gray-700 border border-gray-300 rounded-md cursor-pointer file:mr-4 file:py-2 file:px-4 file:rounded-md file:border-0 file:text-sm file:font-semibold file:bg-purple-800 file:text-white hover:file:bg-purple-700 transition-colors ease duration-300"
+                />
+              </div>
+
+              <button
+                type="submit"
+                class="group/button relative py-2 px-4 cursor-pointer bg-purple-800 hover:bg-purple-700 transition-all duration-300 text-white w-full rounded-lg flex items-center justify-center overflow-hidden"
+              >
+                <span class="transition-all duration-300">Submit</span>
+                <span
+                  class="ml-2 inline-block opacity-0 translate-x-[-8px] transition-all duration-300 group-hover/button:opacity-100 group-hover/button:translate-x-0"
+                >
+                  <i class="fa-solid fa-chevron-right"></i>
+                </span>
+              </button>
             </div>
           </form>
         </div>
