--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <label for="gender" class="block text-sm font-medium text-gray-700">Gender</label>
                 <div class="relative">
                   <select type="gender" id="gender"
-                    class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-gray-700">
+                    class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-black">
                     <option value="" selected disabled hidden>
                       Select Gender
                     </option>
@@ -63,10 +63,11 @@
             <!-- A bit complex -->
             <div class="w-full">
               <!-- teacher -->
-              <input name="role" type="radio" id="teacher-radio" class="h-4 w-4 peer/teacher" checked />
+              <input name="role" type="radio" id="teacher-radio" class="h-4 w-4 accent-purple-800 peer/teacher"
+                checked />
               <label for="teacher-radio">Teacher</label>
               <!-- student -->
-              <input name="role" type="radio" id="student-radio" class="h-4 w-4 peer/student ms-4" />
+              <input name="role" type="radio" id="student-radio" class="h-4 w-4 accent-purple-800 peer/student ms-4" />
               <label for="student-radio">Student</label>
               <!-- Teacher-specific fields -->
               <div class="hidden sm:grid-cols-2 gap-2 peer-checked/teacher:grid w-full mt-2">
@@ -74,7 +75,7 @@
                   <label for="department" class="block text-sm font-medium text-gray-700">Department</label>
                   <div class="relative">
                     <select type="department" id="department"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-gray-700">
+                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-black">
                       <option value="" selected disabled hidden>
                         Select department
                       </option>
@@ -99,7 +100,7 @@
                   </label>
                   <div class="relative">
                     <select id="speciality"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-gray-700">
+                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-black">
                       <option value="" selected disabled hidden>
                         Select speciality
                       </option>
@@ -133,7 +134,7 @@
                   <label for="department" class="block text-sm font-medium text-gray-700">Department</label>
                   <div class="relative">
                     <select type="department" id="department"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-gray-700">
+                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-black">
                       <option value="" selected disabled hidden>
                         Select department
                       </option>
@@ -158,7 +159,7 @@
                   </label>
                   <div class="relative">
                     <select id="batch"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-gray-700">
+                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-black">
                       <option value="" selected disabled hidden>
                         Select batch
                       </option>
