a few more simple fix

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
               <div>
                 <label for="gender" class="block text-sm font-medium text-gray-700">Gender</label>
                 <div class="relative">
-                  <select type="gender" id="gender"
-                    class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-black">
+                  <select type="gender" id="gender" class="mt-1 p-2 w-full border rounded-md appearance-none relative">
                     <option value="" selected disabled hidden>
                       Select Gender
                     </option>
@@ -75,7 +74,7 @@
                   <label for="department" class="block text-sm font-medium text-gray-700">Department</label>
                   <div class="relative">
                     <select type="department" id="department"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-black">
+                      class="mt-1 p-2 w-full border rounded-md appearance-none relative">
                       <option value="" selected disabled hidden>
                         Select department
                       </option>
@@ -99,8 +98,7 @@
                     Speciality
                   </label>
                   <div class="relative">
-                    <select id="speciality"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-black">
+                    <select id="speciality" class="mt-1 p-2 w-full border rounded-md appearance-none relative">
                       <option value="" selected disabled hidden>
                         Select speciality
                       </option>
@@ -134,7 +132,7 @@
                   <label for="department" class="block text-sm font-medium text-gray-700">Department</label>
                   <div class="relative">
                     <select type="department" id="department"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-black">
+                      class="mt-1 p-2 w-full border rounded-md appearance-none relative">
                       <option value="" selected disabled hidden>
                         Select department
                       </option>
@@ -158,8 +156,7 @@
                     Batch
                   </label>
                   <div class="relative">
-                    <select id="batch"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-400 has-[option:checked:not([value=''])]:text-black">
+                    <select id="batch" class="mt-1 p-2 w-full border rounded-md appearance-none relative">
                       <option value="" selected disabled hidden>
                         Select batch
                       </option>
