test push to fix missmathing color on linux and windows

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
               <div>
                 <label for="gender" class="block text-sm font-medium text-gray-700">Gender</label>
                 <div class="relative">
-                  <select type="gender" id="gender" class="mt-1 p-2 w-full border rounded-md appearance-none relative">
+                  <select type="gender" id="gender"
+                    class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-500 has-[option:checked:not([value=''])]:!black">
                     <option value="" selected disabled hidden>
                       Select Gender
                     </option>
@@ -74,7 +75,7 @@
                   <label for="department" class="block text-sm font-medium text-gray-700">Department</label>
                   <div class="relative">
                     <select type="department" id="department"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative">
+                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-500 has-[option:checked:not([value=''])]:!black">
                       <option value="" selected disabled hidden>
                         Select department
                       </option>
@@ -98,7 +99,8 @@
                     Speciality
                   </label>
                   <div class="relative">
-                    <select id="speciality" class="mt-1 p-2 w-full border rounded-md appearance-none relative">
+                    <select id="speciality"
+                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-500 has-[option:checked:not([value=''])]:!black">
                       <option value="" selected disabled hidden>
                         Select speciality
                       </option>
@@ -132,7 +134,7 @@
                   <label for="department" class="block text-sm font-medium text-gray-700">Department</label>
                   <div class="relative">
                     <select type="department" id="department"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative">
+                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-500 has-[option:checked:not([value=''])]:!black">
                       <option value="" selected disabled hidden>
                         Select department
                       </option>
@@ -156,7 +158,8 @@
                     Batch
                   </label>
                   <div class="relative">
-                    <select id="batch" class="mt-1 p-2 w-full border rounded-md appearance-none relative">
+                    <select id="batch"
+                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-500 has-[option:checked:not([value=''])]:!black">
                       <option value="" selected disabled hidden>
                         Select batch
                       </option>
