--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
             <div class="grid sm:grid-cols-2 gap-2">
               <div>
                 <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-                <input type="name" id="name" class="mt-1 p-2 w-full border rounded-md" placeholder="Enter Name" />
+                <input type="name" id="name" class="mt-1 p-2 w-full border border-black rounded-md"
+                  placeholder="Enter Name" />
               </div>
               <div>
                 <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                <input type="email" id="email" class="mt-1 p-2 w-full border rounded-md" placeholder="Your Email" />
+                <input type="email" id="email" class="mt-1 p-2 w-full border border-black rounded-md"
+                  placeholder="Your Email" />
               </div>
             </div>
             <div class="grid sm:grid-cols-2 gap-2">
@@ -38,7 +40,7 @@
                 <label for="gender" class="block text-sm font-medium text-gray-700">Gender</label>
                 <div class="relative">
                   <select type="gender" id="gender"
-                    class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-500 has-[option:checked:not([value=''])]:!black">
+                    class="mt-1 p-2 w-full border black rounded-md appearance-none relative ">
                     <option value="" selected disabled hidden>
                       Select Gender
                     </option>
@@ -52,13 +54,13 @@
               </div>
               <div>
                 <label for="phone" class="block text-sm font-medium text-gray-700">Phone</label>
-                <input type="number" id="phone" class="mt-1 p-2 w-full border rounded-md" placeholder="Phone Number" />
+                <input type="number" id="phone" class="mt-1 p-2 w-full border border-black rounded-md"
+                  placeholder="Phone Number" />
               </div>
             </div>
             <div>
               <label for="date-of-birth" class="block text-sm font-medium text-gray-700">Date of Birth</label>
-              <input type="date" id="date-of-birth"
-                class="mt-1 p-2 w-full border rounded-md placeholder:text-red-500" />
+              <input type="date" id="date-of-birth" class="mt-1 p-2 w-full border border-black rounded-md" />
             </div>
             <!-- A bit complex -->
             <div class="w-full">
@@ -75,7 +77,7 @@
                   <label for="department" class="block text-sm font-medium text-gray-700">Department</label>
                   <div class="relative">
                     <select type="department" id="department"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-500 has-[option:checked:not([value=''])]:!black">
+                      class="mt-1 p-2 w-full border black rounded-md appearance-none relative ">
                       <option value="" selected disabled hidden>
                         Select department
                       </option>
@@ -99,8 +101,7 @@
                     Speciality
                   </label>
                   <div class="relative">
-                    <select id="speciality"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-500 has-[option:checked:not([value=''])]:!black">
+                    <select id="speciality" class="mt-1 p-2 w-full border black rounded-md appearance-none relative ">
                       <option value="" selected disabled hidden>
                         Select speciality
                       </option>
@@ -134,7 +135,7 @@
                   <label for="department" class="block text-sm font-medium text-gray-700">Department</label>
                   <div class="relative">
                     <select type="department" id="department"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-500 has-[option:checked:not([value=''])]:!black">
+                      class="mt-1 p-2 w-full border black rounded-md appearance-none relative ">
                       <option value="" selected disabled hidden>
                         Select department
                       </option>
@@ -158,8 +159,7 @@
                     Batch
                   </label>
                   <div class="relative">
-                    <select id="batch"
-                      class="mt-1 p-2 w-full border rounded-md appearance-none relative text-gray-500 has-[option:checked:not([value=''])]:!black">
+                    <select id="batch" class="mt-1 p-2 w-full border black rounded-md appearance-none relative ">
                       <option value="" selected disabled hidden>
                         Select batch
                       </option>
